openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-upload-react-ui
  labels:
    app: azure-upload-react-ui
spec:
  selector:
    app: azure-upload-react-ui
  ports:
    - name: http
      port: 4444
      targetPort: http
